/*
 * $Id: ChangeLog,v 1.2331 2004/02/20 00:42:23 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-20 05:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * Merged in some Harbour debugger updates by Ryszard Glab:
    + source/debug/dbgbrwsr.prg
      + New TDbgBrowser class which inherits from TBrowse.
    * source/debug/Makefile
    * hrbdll.bc
    * hrbdll.vc
    * makefile.bc
    * makefile.nt
    * makefile.vc
      + Added dbgbrwsr.prg.
    * source/debug/dbgmenu.prg
    * source/debug/dbgtwin.prg
    * source/debug/debugger.prg
    * source/debug/tbrwtext.prg
      + Added "Run at startup" option. If it's enabled then the program
        being debugged runs until ALTD() is called (the default option).
        If it's disabled the debugger shows up at the first code line
        which has debug info. The option is stored in the intialization
        file (init.cld) as 'Options NoRunAtStartup'.
      * Fixed more display/refreshing issues.
      * Fixed quitting the debugger.
    * source/vm/hvm.c
      * Call hb_vmDebugEndProc() before the eval stack is cleaned. This
        allows to handle INIT/EXIT procedures correctly.

2004-02-20 05:15 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/pack.c
    * A cosmetic modification.

2004-02-20 07:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/achoice.prg
    ! fixes on initialization of row/col when initial item is not 1.

2004-02-19 16:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/garbage.c
    % Disabled cleanup functions in hb_gcReleaseAll()

2004-02-19 16:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    % Optimized out hb_itemParam(), hb_itemNew() and hb_itemRelease()
    ! Fixed memory leak in one HB_TRACE() call.

  * source/vm/thread.c
  * source/vm/estack.c